--- a/notebooks/P_blablacar_examFC-Canevas.ipynb
+++ b/notebooks/P_blablacar_examFC-Canevas.ipynb
@@ -8,11 +8,9 @@
     "\n",
     "**Ce fichier est le fichier de travail**, l'autre fichier blablacar.ipynb est donné pour information et pour montrer comment les données ont été collectées. L'API blablacar permet de récupérer l'offre de transport sur la plateforme à partir de requêtes.\n",
     "\n",
-    "Pour info: \n",
-    "http://www-connex.lip6.fr/~guigue/blablacar.ipynb\n",
     "\n",
     "Vous aurez besoin des fichiers correspondant à des récupérations de données aux mois de septembre et novembre:\n",
-    "les fichiers ```blablacar_pp_sept.pkl``` et ```blablacar_pp_nov.pkl``` sont disponibles dans le répertoire ```ressources```.\n",
+    "les fichiers ```blablacar_pp_sept.pkl``` et ```blablacar_pp_nov.pkl``` sont disponibles dans le répertoire ```data```.\n",
     "\n",
     "\n",
     "Ces fichiers correspondent à des requêtes à partir des villes suivantes:\n",
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,23 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14 ['annee', 'mois', 'jour', 'heure', 'dep_ville', 'arr_ville', 'dep_coord_x', 'dep_coord_y', 'arr_coord_x', 'arr_coord_y', 'prix', 'marque', 'stars_confort', 'distance']\n",
-      "(6428, 14)\n",
-      "{'FORD': 6, 'BMW': 12, 'ISUZU': 32, 'OPEL': 1, 'LAND ROVER': 28, 'LIDER': 33, 'DS': 2, 'AUDI': 49, 'DACIA': 45, 'JAGUAR': 39, 'TOYOTA': 13, 'SUZUKI': 20, 'HUNDAI': 42, 'CITROEN': 17, 'IVECO': 8, 'RENAULT': 15, 'SKODA': 27, 'ROVER': 19, 'MITSUBISHI': 5, 'MERCEDES-BENZ': 35, 'DODGE': 29, 'ALFA ROMEO': 37, 'CHEVROLET': 26, 'LANCIA': 10, 'INFINITI': 36, 'DAEWOO': 30, 'MIETWAGEN': 38, 'VOLKSWAGEN': 3, 'LADA': 0, 'GOLF': 4, 'PORSCHE': 23, 'NISSAN': 40, 'unknown': 43, 'SSANGYONG': 34, 'FIAT': 50, 'SAAB': 14, 'CHRYSLER': 51, 'JEEP': 9, 'TESLA': 47, 'PEUGEOT': 25, 'MERCEDES BENZ': 48, 'MAZDA': 31, 'HONDA': 53, 'RANGE ROVER': 11, 'SMART': 24, 'KIA': 52, 'VOLVO': 46, 'LEXUS': 44, 'SUBARU': 18, 'SEAT': 16, 'MINI': 7, 'SUV LEXUS': 21, 'MERCEDES': 41, 'HYUNDAI': 22}\n",
-      "{6: 'FORD', 12: 'BMW', 32: 'ISUZU', 1: 'OPEL', 28: 'LAND ROVER', 33: 'LIDER', 2: 'DS', 49: 'AUDI', 45: 'DACIA', 39: 'JAGUAR', 13: 'TOYOTA', 20: 'SUZUKI', 42: 'HUNDAI', 17: 'CITROEN', 8: 'IVECO', 15: 'RENAULT', 27: 'SKODA', 19: 'ROVER', 5: 'MITSUBISHI', 35: 'MERCEDES-BENZ', 29: 'DODGE', 37: 'ALFA ROMEO', 26: 'CHEVROLET', 10: 'LANCIA', 36: 'INFINITI', 30: 'DAEWOO', 38: 'MIETWAGEN', 3: 'VOLKSWAGEN', 0: 'LADA', 4: 'GOLF', 23: 'PORSCHE', 40: 'NISSAN', 43: 'unknown', 34: 'SSANGYONG', 50: 'FIAT', 14: 'SAAB', 51: 'CHRYSLER', 9: 'JEEP', 47: 'TESLA', 25: 'PEUGEOT', 48: 'MERCEDES BENZ', 31: 'MAZDA', 53: 'HONDA', 11: 'RANGE ROVER', 24: 'SMART', 52: 'KIA', 46: 'VOLVO', 44: 'LEXUS', 18: 'SUBARU', 16: 'SEAT', 7: 'MINI', 21: 'SUV LEXUS', 41: 'MERCEDES', 22: 'HYUNDAI'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# chargement des données numpy\n",
-    "fich = pkl.load( open('blablacar_pp_sept.pkl', 'rb'))\n",
+    "fich = pkl.load( open('data/blablacar_pp_sept.pkl', 'rb'))\n",
     "# ou fich = pkl.load( open('ressources/blablacar_pp_sept.pkl', 'rb'))\n",
     "\n",
     "# {'indexcol': cols , 'data':pp2db, 'villes': villes, 'marques':marques }\n",
@@ -118,73 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LADA',\n",
-       " 'OPEL',\n",
-       " 'DS',\n",
-       " 'VOLKSWAGEN',\n",
-       " 'GOLF',\n",
-       " 'MITSUBISHI',\n",
-       " 'FORD',\n",
-       " 'MINI',\n",
-       " 'IVECO',\n",
-       " 'JEEP',\n",
-       " 'LANCIA',\n",
-       " 'RANGE ROVER',\n",
-       " 'BMW',\n",
-       " 'TOYOTA',\n",
-       " 'SAAB',\n",
-       " 'RENAULT',\n",
-       " 'SEAT',\n",
-       " 'CITROEN',\n",
-       " 'SUBARU',\n",
-       " 'ROVER',\n",
-       " 'SUZUKI',\n",
-       " 'SUV LEXUS',\n",
-       " 'HYUNDAI',\n",
-       " 'PORSCHE',\n",
-       " 'SMART',\n",
-       " 'PEUGEOT',\n",
-       " 'CHEVROLET',\n",
-       " 'SKODA',\n",
-       " 'LAND ROVER',\n",
-       " 'DODGE',\n",
-       " 'DAEWOO',\n",
-       " 'MAZDA',\n",
-       " 'ISUZU',\n",
-       " 'LIDER',\n",
-       " 'SSANGYONG',\n",
-       " 'MERCEDES-BENZ',\n",
-       " 'INFINITI',\n",
-       " 'ALFA ROMEO',\n",
-       " 'MIETWAGEN',\n",
-       " 'JAGUAR',\n",
-       " 'NISSAN',\n",
-       " 'MERCEDES',\n",
-       " 'HUNDAI',\n",
-       " 'unknown',\n",
-       " 'LEXUS',\n",
-       " 'DACIA',\n",
-       " 'VOLVO',\n",
-       " 'TESLA',\n",
-       " 'MERCEDES BENZ',\n",
-       " 'AUDI',\n",
-       " 'FIAT',\n",
-       " 'CHRYSLER',\n",
-       " 'KIA',\n",
-       " 'HONDA']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nums = list(inv_dico_marques.keys())\n",
     "nums.sort() # remise dans l'ordre\n",
@@ -557,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -571,7 +494,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "902a52bcf4503a473db011f1937bdfe17613b08622219712e0110e48c4958c23"
+   }
   }
  },
  "nbformat": 4,
