--- a/notebooks/4_Canevas_velib-corr.ipynb
+++ b/notebooks/4_Canevas_velib-corr.ipynb
@@ -150,7 +150,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  TODO "
+    "# <CORRECTION>\n",
+    "df['arr'] = df['number']//1000\n",
+    "df['arr'].value_counts()\n",
+    "# </CORRECTION>"
    ]
   },
   {
@@ -170,7 +173,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO \n",
+    "#<CORRECTION>\n",
+    "# pour travailler sur Paris uniquement:\n",
+    "dfp = df[np.logical_and(df['arr']>0,df['arr']<=20)].copy() # pour travailler sur une nouvelle structure de données\n",
+    "df = dfp # pour travailler sur df pendant tout le TP... le df d'origine est ici perdu.\n",
+    "#</CORRECTION>\n",
     "\n",
     "# pour travailler sur Paris uniquement:\n",
     "# dfp =    # faire la sélection \n",
@@ -224,7 +231,15 @@
     "plt.grid(True) # affichage de la grille\n",
     "plt.colorbar(coll) # affichage de la légende\n",
     "\n",
-    "# TODO "
+    "#<CORRECTION>\n",
+    "plt.figure()\n",
+    "plt.scatter(df['lng'],df['lat'], s=10, c=df['arr'], cmap='Accent')\n",
+    "plt.grid(True) # affichage de la grille\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.scatter(df['lng'],df['lat'], s=10, c=df['available_bike_stands']/df['bike_stands'])\n",
+    "plt.grid(True) # affichage de la grille\n",
+    "#</CORRECTION>"
    ]
   },
   {
@@ -307,7 +322,18 @@
     "\n",
     "# visualiser la nouvelle variable pour comprendre le processus... Puis en faire une nouvelle colonne dans les données\n",
     "\n",
-    "# TODO \n"
+    "#<CORRECTION>\n",
+    "\n",
+    "# definition + discretisation\n",
+    "#####################################\n",
+    "df['pc_available'] = df['available_bikes'] / df['bike_stands']\n",
+    "\n",
+    "\n",
+    "# passage aux index de classes & ajout de colonne dans la structure de données df\n",
+    "df['ind_alt'] = pd.cut(df['alt'],nA, labels=False) # labels=False => pour avoir des entiers\n",
+    "df['ind_pc']  = pd.cut(df['pc_available'],nD, labels=False) # pour avoir des entiers\n",
+    "\n",
+    "# </CORRECTION>\n"
    ]
   },
   {
@@ -319,7 +345,12 @@
     "\n",
     "# calcul des probabilites jointes (Altitude, Disponibilité)\n",
     "\n",
-    "#  TODO \n",
+    "# <CORRECTION>\n",
+    "p_AD = pd.crosstab(df['ind_alt'], df['ind_pc']).to_numpy().astype(float)\n",
+    "print(p_AD.shape)\n",
+    "p_AD /= len(df) # étape 2 : normalisation => estimation fréquentielle de la loi jointe\n",
+    "\n",
+    "# </CORRECTION>\n",
     "\n",
     "# affichage\n",
     "plt.figure()\n",
@@ -340,7 +371,18 @@
     "###########\n",
     "# conditionnalisation\n",
     "\n",
-    "#  TODO \n",
+    "# <CORRECTION>\n",
+    "p_A = p_AD.sum(1) # marginalisation\n",
+    "# print(len(p_A))\n",
+    "\n",
+    "# p(D | A) = p(A,D) / p(A)\n",
+    "p_D_A = p_AD.copy() # calcul de p(D | A) : étape 1, initialisation\n",
+    "# print(p_D_A.shape)\n",
+    "for i in range(nA): # calcul de p(D | A) : étape 2, pour chaque ligne, division par la marginale\n",
+    "    print(i,p_D_A[i])\n",
+    "    p_D_A[i] /= p_A[i]\n",
+    "\n",
+    "# </CORRECTION>\n",
     "\n",
     "# affichage du résultat\n",
     "plt.figure()\n",
@@ -360,7 +402,33 @@
     "###########\n",
     "# Espérances conditionnelles\n",
     "\n",
-    "#  TODO "
+    "# <CORRECTION>\n",
+    "d = (np.linspace(0, 1.0, nD+1) + 1./(2*nD))[:-1]\n",
+    "\n",
+    "# version rapide (mais dure à lire) reposant sur le dispatch python:\n",
+    "e_D_A = (p_D_A * d.reshape(1,nD)).sum(1)\n",
+    "print(e_D_A)\n",
+    "\n",
+    "# version élégante\n",
+    "e_D_A = (p_D_A @ d.reshape(nD,1))\n",
+    "print(e_D_A)\n",
+    "\n",
+    "\n",
+    "# version plus longue (et plus lisble):\n",
+    "# etape 1: valeur de disponibilité\n",
+    "# entre la valeur min et la valeur max, je veux (Nd+1) jalons, \n",
+    "# puis je veux la valeur centrale des intervalles (décalage 1./(2*Nd))\n",
+    "# puis l'abandonne la valeur de trop (qui dépasse) = tous les indices jusqu'à l'avant dernier => [:-1]\n",
+    "\n",
+    "\n",
+    "e_D_A = np.zeros(nA)\n",
+    "# étape 2: pour chaque distribution, calcul de l'espérance:\n",
+    "for i in range(nA):\n",
+    "    e_D_A[i] = (d * p_D_A[i]).sum()\n",
+    "print(e_D_A)\n",
+    "\n",
+    "\n",
+    "# </CORRECTION>"
    ]
   },
   {
@@ -371,7 +439,15 @@
    "source": [
     "# Calcul de correlation\n",
     "\n",
-    "#  TODO "
+    "# <CORRECTION>\n",
+    "plt.figure()\n",
+    "plt.scatter(df['alt'], df['pc_available'], s=2)\n",
+    "\n",
+    "co = np.cov(df['alt'], df['pc_available'])[0,1] \n",
+    "r  = np.cov(df['alt'], df['pc_available'])[0,1]/(np.std(df['alt']) * np.std(df['pc_available']))\n",
+    "\n",
+    "print('COV = {} \\nCoef de corrélation linéaire : {}'.format(co,r))\n",
+    "#</CORRECTION>"
    ]
   },
   {
@@ -616,7 +692,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###  TODO )\",\" TODO \",\\\n",
+    "### <CORRECTION> ###\n",
+    "import re\n",
+    "# transformation de cet énoncé en version étudiante\n",
+    "\n",
+    "fname = \"4_Canevas_velib-corr.ipynb\" # ce fichier\n",
+    "fout  = fname.replace(\"-corr\",\"\")\n",
+    "\n",
+    "# print(\"Fichier de sortie: \", fout )\n",
+    "\n",
+    "f = open(fname, \"r\")\n",
+    "txt = f.read()\n",
+    " \n",
+    "f.close()\n",
+    "\n",
+    "\n",
+    "f2 = open(fout, \"w\")\n",
+    "f2.write(re.sub(\"<CORRECTION>.*?(</CORRECTION>)\",\" TODO \",\\\n",
     "    txt, flags=re.DOTALL))\n",
     "f2.close()\n",
     "\n",
